/ fix text not wrapping on newlines in event desc

--- a/src/app/pages/home/section-events/section-events.component.scss
+++ b/src/app/pages/home/section-events/section-events.component.scss
@@ -51,6 +51,7 @@
         .event-details-col {
             .event-description {
                 word-break: break-all;
+                white-space: pre-wrap;
             }
         }
     }
